examples/test/testpolicy1104.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1104
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key24: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value19
          key1: value25
      podSelector:
        matchLabels:
          key18: value1
          key29: value16
